AlterEmployee class implemented

--- a/KnuDbWithEf/MainForm.resx
+++ b/KnuDbWithEf/MainForm.resx
@@ -1112,6 +1112,12 @@
   <metadata name="dEPARTMENTBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>258, 148</value>
   </metadata>
+  <metadata name="dEPARTMENTBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>258, 148</value>
+  </metadata>
+  <metadata name="dEGREELISTBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>736, 148</value>
+  </metadata>
   <metadata name="dEGREELISTBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>736, 148</value>
   </metadata>
